--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,64 @@
 == Specs (brainstorming state) ==
 
-- Auth
+- Question
 
-  - We only auth once with Twitter Oauth
-  - We need to store the auth somewhere that can be accessed
-    accross the Bot interface
+    - We identify it is a question with a question word: (What|How much)
+    - Then the object of the question: (price/value | balance | transferred/transaction)
+    - Then the REFERENCE/TIME/UNIT
+
+    Example questions:
+
+    ; Value of bitcoin
+
+      - (What|How much)                                 -> Question word 
+
+        NOW                                             -> Time
+        (is) the (price|value) of bitcoins              -> Object
+
+        PAST
+        (was|has been) the (price|value) of bitcoins
+        (yesterday|last week|last month)        
+
+        FUTURE
+        (will be) the (price|value) of bitcoins
+
+        (at) (btce|bitstamp|btcchina)                   -> Reference
+
+        (in) (dollars|euros|yuans|guiness pints)        -> Unit
+
+    ; Balance of an address
+    
+      - (QUESTION WORD)
+      - is the (balance)
+      - of (xxxxxx)     
+      - in (UNIT)
+
+    ; Bitcoins sent/received 
+
+            SENT               RECEIVED                
+    
+      -              (QUESTION WORD)
+      - (sent)               (received)
+      - by, from             
+      - (public address)     (public address)
+
+      Example: How much has received (public address)
+               How much has send (public address)
+               What has been received by (public address)
+
+               Tell me total the Bitcoins sent from (public address)
+
+    ; Transaction value
+    
+      - (QUESTION WORDS)
+      - (total input|total output|total)
+      - have been
+      - (transferred|transaction)
+      - with (transaction hash)
+
+      Example: How much has been (transferred) with (hash)
+               What is the (total input) of the (transaction) (hash)
+
 
 - Status
 
